--- a/app/src/main/res/layout/activity_owner_main.xml
+++ b/app/src/main/res/layout/activity_owner_main.xml
@@ -24,6 +24,8 @@
         android:layout_height="@dimen/px110"
         android:visibility="gone"
         android:id="@+id/lay_ship"
+        android:layout_weight="0"
+        android:layout_gravity="bottom"
         android:orientation="horizontal">
 
         <TextView android:id="@+id/tv_main_cars"
@@ -55,6 +57,8 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/px110"
         android:id="@+id/lay_owner"
+        android:layout_weight="0"
+        android:layout_gravity="bottom"
         android:orientation="horizontal">
 
         <TextView android:id="@+id/tv_main_goods"
