--- a/app/src/main/res/layout/activity_certification.xml
+++ b/app/src/main/res/layout/activity_certification.xml
@@ -8,7 +8,7 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/ftoolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="@dimen/px100"
         android:background="@color/title_bg"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
         <com.zhy.autolayout.AutoLinearLayout
