--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -51,6 +51,7 @@
     <dimen name="px60">60px</dimen>
     <dimen name="px65">65px</dimen>
     <dimen name="px70">70px</dimen>
+    <dimen name="px72">72px</dimen>
     <dimen name="px80">80px</dimen>
     <dimen name="px85">85px</dimen>
     <dimen name="px88">88px</dimen>
@@ -64,6 +65,7 @@
     <dimen name="px160">160px</dimen>
     <dimen name="px170">170px</dimen>
     <dimen name="px180">180px</dimen>
+    <dimen name="px190">190px</dimen>
     <dimen name="px200">200px</dimen>
     <dimen name="px220">220px</dimen>
     <dimen name="px240">240px</dimen>
@@ -77,6 +79,8 @@
     <dimen name="px410">410px</dimen>
     <dimen name="px420">420px</dimen>
     <dimen name="px450">450px</dimen>
+    <dimen name="px480">480px</dimen>
+    <dimen name="px490">490px</dimen>
     <dimen name="px500">500px</dimen>
     <dimen name="px600">600px</dimen>
     <dimen name="px700">700px</dimen>
